--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-i18next": "^16.3.3",
+    "react-phone-number-input": "^3.4.14",
     "react-router-dom": "^7.9.6",
     "swiper": "^12.0.3",
     "zustand": "^5.0.8"
